backported fix for some cpp versions not liking -MMD switch from the main branch

--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -13,6 +13,14 @@ wxMSW:
 OTHER CHANGES
 -------------
 
+2.2.10
+------
+
+Unix:
+
+- fixed configure bug which prevented it from finding anything with some
+  compiler versions
+
 2.2.9
 -----
 
