backported wxHTMLHelp cache fix to 2.2

--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -21,6 +21,10 @@ Unix:
 - fixed configure bug which prevented it from finding anything with some
   compiler versions
 
+wxHTML:
+
+- fixed wxHtmlHelpController's cache files handling on big endian machines
+
 2.2.9
 -----
 
