fixed wxPageSetupDialogData::SetPaperId() to take value, not reference

--- a/docs/latex/wx/pagedlg.tex
+++ b/docs/latex/wx/pagedlg.tex
@@ -201,7 +201,7 @@ in millimetres.
 
 \membersection{wxPageSetupDialogData::SetPaperId}\label{wxpagesetupdialogdatasetpaperid}
 
-\func{void}{SetPaperId}{\param{wxPaperSize\& }{id}}
+\func{void}{SetPaperId}{\param{wxPaperSize }{id}}
 
 Sets the paper size id. For further information, see \helpref{wxPrintData::SetPaperId}{wxprintdatasetpaperid}.
 
