--- a/wxWidgets/branches/WX_2_2_BRANCH/docs/changes.txt
+++ b/wxWidgets/branches/WX_2_2_BRANCH/docs/changes.txt
@@ -24,6 +24,7 @@ Unix:
 wxHTML:
 
 - fixed wxHtmlHelpController's cache files handling on big endian machines
+- fixed alignment handling in tables
 
 2.2.9
 -----
