--- a/wxWidgets/branches/WX_2_2_BRANCH/docs/latex/wx/choice.tex
+++ b/wxWidgets/branches/WX_2_2_BRANCH/docs/latex/wx/choice.tex
@@ -180,9 +180,9 @@ The string at the given position, or the empty string if {\it n} is invalid.
 
 Gets the selected string, or the empty string if no string is selected.
 
-\membersection{wxChoice::Number}\label{wxchoicenumber}
+\membersection{wxChoice::GetCount}\label{wxchoicegetcount}
 
-\constfunc{int}{Number}{\void}
+\constfunc{int}{GetCount}{\void}
 
 Returns the number of strings in the choice control.
 
