--- a/wxWidgets/branches/WX_2_2_BRANCH/docs/latex/wx/combobox.tex
+++ b/wxWidgets/branches/WX_2_2_BRANCH/docs/latex/wx/combobox.tex
@@ -225,12 +225,11 @@ Gets the selected string.
 
 Returns the current value in the combobox text field.
 
-\membersection{wxComboBox::Number}\label{wxcomboboxnumber}
+\membersection{wxComboBox::GetCount}\label{wxcomboboxgetcount}
 
-\constfunc{int}{Number}{\void}
+\constfunc{int}{GetCount}{\void}
 
 Returns the number of items in the combobox list.
-%TODO: make this GetNumber or GetCount?
 
 \membersection{wxComboBox::Paste}\label{wxcomboboxpaste}
 
